k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: starshipcommsresolver-deployment
spec:
  replicas: 1  # You can adjust this number as needed
  selector:
    matchLabels:
      app: starshipcommsresolver
  template:
    metadata:
      labels:
        app: starshipcommsresolver
    spec:
      containers:
      - name: starshipcommsresolver
        image: us-central1-docker.pkg.dev/adroit-marking-404823/command-resolve/stars:1.0 # Update with your actual Docker image repository
        ports:
        - containerPort: 8080
